--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=peep
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
+
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_OAUTH_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_OAUTH_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=${GOOGLE_OAUTH_SCOPE}
+spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_OAUTH_REDIRECT_URI}
