--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.security.oauth2.client.registration.google.client-id=${GOOGLE_OAUTH_CLIEN
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_OAUTH_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=${GOOGLE_OAUTH_SCOPE}
 spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_OAUTH_REDIRECT_URI}
+gmail.pubsub.topic=${GMAIL_PUBSUB_TOPIC}
