--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,12 @@
 			<version>3.4.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.genai</groupId>
+			<artifactId>google-genai</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+
 <!--TEST-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
