--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_OAUTH_C
 spring.security.oauth2.client.registration.google.scope=${GOOGLE_OAUTH_SCOPE}
 spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_OAUTH_REDIRECT_URI}
 gmail.pubsub.topic=${GMAIL_PUBSUB_TOPIC}
+gmail.pubsub.application.name=${APPLICATION_NAME}
