Added refreshing access token and gmail watch refresh functionality

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+<!--THYMELEAF-->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-thymeleaf</artifactId>-->
+<!--			<version>3.5.3</version>-->
+<!--		</dependency>-->
+
 <!--TEST-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
