--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.security.oauth2.client.registration.google.scope=${GOOGLE_OAUTH_SCOPE}
 spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_OAUTH_REDIRECT_URI}
 gmail.pubsub.topic=${GMAIL_PUBSUB_TOPIC}
 gmail.pubsub.application.name=${APPLICATION_NAME}
+
+frontend.url=${FRONTEND_URL}
